--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "normalize.css": "^8.0.1",
+    "query-string": "^6.3.0",
     "ramda": "^0.26.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
