--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cd client && yarn build",
     "start": "node server/index.js",
     "heroku-postbuild": "cd client && yarn && yarn --only=dev --no-shrinkwrap && yarn build",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn start\" \"yarn client\""
   },
   "keywords": [],
   "author": {
